# dataviz

./: Home.md  Installation.md  LICENSE.txt  README.md  pyproject.toml
Dataviz/src/dataviz/: cli.py
src/dataviz/: __init__.py  core.py  styles.py
src/mxray/: __init__.py  cli.py  core.py  exporters.py  styles.py
